--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="content">
       <p>
         Hi, I'm Ben Baryo <br>
-        A security researcher and developer.
+        A web security researcher and a full-stack developer
       </p>
       <p>You can find me on <a href="https://twitter.com/ctrl__esc" target="_blank">Twitter</a> or <a
           href="https://www.linkedin.com/in/bbaryo/">LinkedIn</a></p>
@@ -212,6 +212,7 @@
         <li>Fraud detection</li>
         <li>Bot (automation) and anti-bot mechanisms</li>
         <li>Automating processes</li>
+        <li>Research into new technologies</li>
         <li>Creating and presenting technical content (blogs and presentations)</li>
         <li>Building high performing (yet poorly looking) websites 🥲</li>
       </ul>
