Replace PNGs with WebP

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ben Baryo's GitHub space">
-  <link rel="icon" href="favicon.png">
+  <link rel="icon" href="favicon.webp">
   <title>Ben Baryo</title>
   <style>
     :root {
@@ -185,7 +185,7 @@
 <body>
 <header>
   <span class="logo-and-title">
-  <img src="static/profile-pic.png" alt="Profile pic" class="profile-pic">
+  <img src="static/profile-pic.webp" alt="Profile pic" class="profile-pic">
   <span class="title">The Baryo Pages</span>
   </span>
   <nav>
@@ -203,7 +203,7 @@
 <main>
   <div class="home hide">
     <div class="banner">
-      <img src="favicon.png" alt="Ben Baryo's profile picture" class="profile-pic">
+      <img src="favicon.webp" alt="Ben Baryo's profile picture" class="profile-pic">
       <p class="an-unfortunate-haiku">
       <i>I could not think of <br>
       any words to welcome you <br>
@@ -361,8 +361,8 @@
   }
 
   function switchImage(el) {
-    const pic1 = 'static/profile-pic.png';
-    const pic2 = 'favicon.png';
+    const pic1 = 'static/profile-pic.webp';
+    const pic2 = 'favicon.webp';
     el.src = el.src.includes(pic1) ? pic2 : pic1;
   }
 
