Move favicon into static folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ben Baryo's GitHub space">
-  <link rel="icon" href="favicon.webp">
+  <link rel="icon" href="static/favicon.webp">
   <title>Ben Baryo</title>
   <style>
     :root {
@@ -203,7 +203,7 @@
 <main>
   <div class="home hide">
     <div class="banner">
-      <img src="favicon.webp" alt="Ben Baryo's profile picture" class="profile-pic">
+      <img src="static/favicon.webp" alt="Ben Baryo's profile picture" class="profile-pic">
       <p class="an-unfortunate-haiku">
       <i>I could not think of <br>
       any words to welcome you <br>
@@ -362,7 +362,7 @@
 
   function switchImage(el) {
     const pic1 = 'static/profile-pic.webp';
-    const pic2 = 'favicon.webp';
+    const pic2 = 'static/favicon.webp';
     el.src = el.src.includes(pic1) ? pic2 : pic1;
   }
 
