Lazy load images

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
       .profile-pic {
         width: 10rem;
         border-radius: 50%;
-
       }
       .an-unfortunate-haiku {
         text-align: center;
@@ -185,7 +184,7 @@
 <body>
 <header>
   <span class="logo-and-title">
-  <img src="static/profile-pic.webp" alt="Profile pic" class="profile-pic">
+  <img src="static/profile-pic.webp" alt="Profile pic" class="profile-pic" loading="lazy">
   <span class="title">The Baryo Pages</span>
   </span>
   <nav>
@@ -203,7 +202,7 @@
 <main>
   <div class="home hide">
     <div class="banner">
-      <img src="static/favicon.webp" alt="Ben Baryo's profile picture" class="profile-pic">
+      <img src="static/favicon.webp" alt="Ben Baryo's profile picture" class="profile-pic" loading="lazy">
       <p class="an-unfortunate-haiku">
       <i>I could not think of <br>
       any words to welcome you <br>
