--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ben Baryo's GitHub space">
   <link rel="icon" href="static/favicon.webp">
+  <link rel="preload" href="static/profile-pic.webp" as="image">
   <title>Ben Baryo</title>
   <style>
     :root {
