--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <div class="item-description">A web interface for exploring JS code structures using flAST</div>
         <div class="item-language">JavaScript</div>
         <div class="item-links">
-          <a href="https://github.com/perimeterx/flASTer" target="_blank">repo</a> |
+          <a href="https://github.com/ctrl-escp/flASTer" target="_blank">repo</a> |
           <a href="https://ctrl-escp.github.io/flaster/" target="_blank">site</a>
         </div>
       </div>
