Add REstringer Youtube lecture

--- a/index.html
+++ b/index.html
@@ -418,6 +418,10 @@
         <br><span class="topic">Magecart</span><span class="topic">ChatGPT</span><span class="topic">PCI-DSS</span><span class="topic">JavaScript</span>
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=NxlULXfOusg" target="_blank">REstringer: Building a JS Deobfuscator (Hebrew video lecture)</a>
+        <br><span class="topic">Deobfuscation</span><span class="topic">AST</span><span class="topic">JavaScript</span>
+      </li>
+      <li>
         <a href="https://www.humansecurity.com/learn/blog/a-cure-for-the-obscure-javascript-deobfuscation" target="_blank">A Cure for the Obscure: JavaScript De-obfuscation</a>
         <br><span class="topic">Magecart</span><span class="topic">Deobfuscation</span><span class="topic">JavaScript</span>
       </li>
