Add shadow to project boxes

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     }
     #projects {
       .content {
+        padding: 1rem;
         overflow-y: auto;
         display: flex;
         justify-content: center;
@@ -118,6 +119,7 @@
         }
         .item {
           display: flex;
+          box-shadow: black .4rem .5rem .6rem;
           flex-direction: column;
           justify-content: space-between;
           flex: 0 0 20%;
