Add some meta data

--- a/index.html
+++ b/index.html
@@ -3,9 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Ben Baryo's GitHub space">
+  <meta name="description" content="It's a-me! A-Baryo!">
+  <meta name="author" content="Ben Baryo">
+  <meta name="keywords" content="ben, baryo, security, research, researcher, security research, security researcher, full-stack, full, stack, developer, javascript, obfuscation, deobfuscation, obfuscate, deobfuscate, resume">
+  <meta property="og:title" content="Ben Baryo | Security Researcher & Full-Stack Developer">
+  <meta property="og:site_name" content="Ben Baryo | Security Researcher & Full-Stack Developer">
+  <meta property="og:description" content="Ben Baryo's personal pages">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="./static/favicon.webp">
+  <meta property="twitter:card" content="summary">
+  <meta property="twitter:title" content="It's a-me! A-Baryo!">
+  <link rel="canonical" href="https://ctrl-escp.github.io/">
   <link rel="icon" href="static/favicon.webp">
-  <title>Ben Baryo</title>
+  <title>Ben Baryo | Security Researcher & Full Stack Developer</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "description": "Ben Baryo's personal pages",
+      "headline": "It's a-me! A-Baryo!",
+      "name": "Ben Baryo | Security Researcher & Full-Stack Developer",
+      "url": "https://ctrl-escp.github.io/",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Ben Baryo",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://ctrl-escp.github.io/static/favicon.webp"
+        }
+      },
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://ctrl-escp.github.io/static/favicon.webp",
+        "width": 160,
+        "height": 160
+      }
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Ben Baryo | Security Researcher & Full-Stack Developer",
+      "description": "Ben Baryo's personal pages",
+      "applicationCategory": "Personal",
+      "operatingSystem": "Web",
+      "browserRequirements": "HTML5, CSS3, JavaScript",
+      "url": "https://ctrl-escp.github.io/",
+      "image": "https://ctrl-escp.github.io/static/favicon.webp",
+      "author": {
+        "@type": "Person",
+        "name": "Ben Baryo",
+        "sameAs": [
+          "https://ctrl-escp.github.io/sudoku",
+          "https://ctrl-escp.github.io/flaster"
+        ]
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "5",
+        "reviewCount": "1337"
+      }
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "Who is Ben Baryo?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Ben Baryo is an Israeli security researcher and full stack developer"
+        }
+      }
+      ]
+    }
+  </script>
   <style>
     :root {
       --background-color-base: bisque;
