--- a/index.html
+++ b/index.html
@@ -19,55 +19,79 @@
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebSite",
-      "description": "Ben Baryo's personal pages",
-      "headline": "It's a-me! A-Baryo!",
-      "name": "Ben Baryo | Security Researcher & Full-Stack Developer",
+      "@type": "Person",
+      "name": "Ben Baryo",
+      "@id": "https://ctrl-escp.github.io/#person",
+      "description": "Web security researcher, full-stack developer, and technical content creator.",
+      "jobTitle": "Security Researcher & Full Stack Developer",
       "url": "https://ctrl-escp.github.io/",
-      "publisher": {
-        "@type": "Organization",
-        "name": "Ben Baryo",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://ctrl-escp.github.io/static/favicon.webp"
-        }
-      },
+      "sameAs": [
+        "https://github.com/ctrl-escp",
+        "https://www.linkedin.com/in/benbaryo",
+        "https://twitter.com/ctrl__esc"
+      ],
       "image": {
         "@type": "ImageObject",
+        "@id": "https://ctrl-escp.github.io/#image",
         "url": "https://ctrl-escp.github.io/static/favicon.webp",
         "width": 160,
         "height": 160
-      }
+      },
+      "knowsAbout": [
+        "Web Security",
+        "JavaScript",
+        "TypeScript",
+        "Python",
+        "Go",
+        "Golang",
+        "Fraud Detection",
+        "Obfuscation",
+        "Deobfuscation",
+        "Security Research",
+        "JS Obfuscation",
+        "JS Deobfuscation",
+        "JavaScript Obfuscation",
+        "JavaScript Deobfuscation",
+        "Full-stack Development"
+      ]
     }
   </script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "Ben Baryo | Security Researcher & Full-Stack Developer",
+      "@type": "WebSite",
       "description": "Ben Baryo's personal pages",
-      "applicationCategory": "Personal",
-      "operatingSystem": "Web",
-      "browserRequirements": "HTML5, CSS3, JavaScript",
+      "headline": "It's a-me! A-Baryo!",
+      "@id": "https://ctrl-escp.github.io/#site",
+      "name": "Ben Baryo | Security Researcher & Full-Stack Developer",
       "url": "https://ctrl-escp.github.io/",
-      "image": "https://ctrl-escp.github.io/static/favicon.webp",
       "author": {
         "@type": "Person",
         "name": "Ben Baryo",
-        "sameAs": [
-          "https://ctrl-escp.github.io/sudoku",
-          "https://ctrl-escp.github.io/flaster"
-        ]
+        "url": "https://ctrl-escp.github.io/",
+        "image": {
+          "@id": "https://ctrl-escp.github.io/#image"
+        }
       },
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD"
+      "image": {
+        "@id": "https://ctrl-escp.github.io/#image"
       },
+      "sameAs": [
+        "https://ctrl-escp.github.io/sudoku",
+        "https://ctrl-escp.github.io/flaster",
+        "https://github.com/ctrl-escp",
+        "https://www.linkedin.com/in/benbaryo",
+        "https://twitter.com/ctrl__esc"
+      ],
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "5",
-        "reviewCount": "1337"
+        "bestRating": 5,
+        "reviewCount": "1337",
+        "itemReviewed": {
+          "@id": "https://ctrl-escp.github.io/#site"
+        },
+        "url": "https://ctrl-escp.github.io/"
       }
     }
   </script>
