--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     :root {
       --background-color-base: bisque;
       --background-color-selected: burlywood;
-      --body-background-color: #474747;
+      --body-background-color: #292929;
       --font-size-base: 16px;
     }
     body {
@@ -139,7 +139,7 @@
     header {
       display: flex;
       align-items: center;
-      background-color: #272734;
+      background-color: #30307D;
       width: 100%;
       height: 3.5rem;
       justify-content: space-between;
@@ -201,7 +201,7 @@
         gap: .3rem;
       }
       .highlight {
-        color: #EE746C;
+        color: #FAA29E;
       }
       .link-icon {
         svg {
@@ -304,7 +304,7 @@
 <body>
 <header>
   <a class="logo-and-title" href="#" title="Back to the main page">
-  <img src="static/favicon.webp" alt="Profile pic" class="profile-pic" loading="lazy">
+  <img src="static/favicon.webp" alt="Profile pic" class="profile-pic" loading="lazy" height="40" width="40">
   <span class="title">The Baryo Pages</span>
   </a>
   <nav>
@@ -322,7 +322,7 @@
 <main>
   <div class="home hide">
     <div class="banner">
-      <img src="static/favicon.webp" alt="Ben Baryo's profile picture" class="profile-pic" loading="lazy">
+      <img src="static/favicon.webp" alt="Ben Baryo's profile picture" class="profile-pic" loading="lazy" height="160" width="160">
       <p class="an-unfortunate-haiku">
       <i>I could not think of <br>
       any words to welcome you <br>
