Add new article to published work section

--- a/index.html
+++ b/index.html
@@ -521,6 +521,10 @@
     <p>Some of my published work:</p>
     <ul class="published-work">
       <li>
+        <a href="https://www.humansecurity.com/learn/blog/vendor-mimicking-inside-a-magecart-style-attack/" target="_blank">Vendor Mimicking Inside a Magecart-Style Attack</a>
+        <div class="tags"><span class="topic">Magecart</span><span class="topic"></span>JavaScript</span><span class="topic">Fraud-Infrastructure</span></div>
+      </li>
+      <li>
         <a href="https://www.humansecurity.com/learn/blog/me-you-and-the-gpu" target="_blank">Me, You, and the GPU</a>
         <div class="tags"><span class="topic">JavaScript</span><span class="topic">Captcha</span><span class="topic">Anti-Bot</span></div>
       </li>
