Fix tag structure in published work section of index.html

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
     <ul class="published-work">
       <li>
         <a href="https://www.humansecurity.com/learn/blog/vendor-mimicking-inside-a-magecart-style-attack/" target="_blank">Vendor Mimicking Inside a Magecart-Style Attack</a>
-        <div class="tags"><span class="topic">Magecart</span><span class="topic"></span>JavaScript</span><span class="topic">Fraud-Infrastructure</span></div>
+        <div class="tags"><span class="topic">Magecart</span><span class="topic"></span><span class="topic">JavaScript</span><span class="topic">Fraud-Infrastructure</span></div>
       </li>
       <li>
         <a href="https://www.humansecurity.com/learn/blog/me-you-and-the-gpu" target="_blank">Me, You, and the GPU</a>
