Update font size in title and modify heading structure in published work section for better clarity

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         text-decoration: none;
         .title {
           font-family: sans-serif;
+          font-size: clamp(0.9rem, 2.5vw, 1rem);
           @media (max-width: 500px) {
             display: none;
           }
@@ -531,8 +532,7 @@
     </div>
   </section>
   <section id="articles" class="hide" aria-labelledby="articles-heading">
-    <h2 id="articles-heading">Published Work</h2>
-    <p>Some of my published work:</p>
+    <h2 id="articles-heading">Some of my published work:</h2>
     <ul class="published-work">
       <li>
         <a href="https://www.humansecurity.com/learn/blog/vendor-mimicking-inside-a-magecart-style-attack/" target="_blank">Vendor Mimicking Inside a Magecart-Style Attack</a>
